2006-02-24  Mark D. Baushke  <mdb@gnu.org>

	* client.c (gzip_level): Move to...
	* main.c (gzip_level): ...here.
	(main): Revert previous change in '-z' argument processing and
	remove CLIENT_SUPPORT ifdef/endif.
	* sanity.h (crerepos-6a): Deal with --disable-client output.

	* main.c (main): Validate the gzip compression level for
	--disable-client configurations.

2006-02-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio-6): Rewrite using more portable sed script.

2006-02-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio): Attempt to ignore spurious SSH output.

	* server.c (do_cvs_command): Clarify FIXME.

2006-02-01  Derek Price  <derek@ximbiot.com>

	* tag.c (add_to_val_tags): When a tag turns out to exist in the db when
	it isn't expected, release the lock.

	* history.c (save_user, save_file, save_mod, read_hrecs): Avoid
	overflow.

2006-01-30  Derek Price  <derek@ximbiot.com>

	* server.c (do_cvs_command): Set flow control pipe to blocking mode
	before waiting for it to close.
	(set_block_fd): New function.
	(Original patch from Garrett Rooney <grooney@collab.net>.)

	* rcs.c (locate_rcs): Improve comments and plug memory leak.
	(rcsbuf_cache_open): Don't recopy file name - it was an ignore case
	issue.

2006-01-26  Mark D. Baushke  <mdb@gnu.org>

	Dump pagealign_alloc in favor of malloc to avoid mmap() problems.
	* buffer.c: Remove include of pagealign_alloc.h
	(get_buffer_data): s/pagealign_xalloc/xmalloc/
	(buf_free_datas): s/pagealign_free/free/
	* zlib.c: Remove include of pagealign_alloc.h
	(compress_buffer_input): s/pagealign_xalloc/xmalloc/
	(compress_buffer_output): Ditto.
	(compress_buffer_flush): Ditto.
	(compress_buffer_shutdown_output): Ditto.

2006-01-16  Derek Price  <derek@ximbiot.com>

	* sanity.sh (join-16a): Test "no such tag" error with -j.

	* update.c (update): Correct typo.

2006-01-13  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (config_contents): Change SystemAuth to yes to match
	the default value.